--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,7 @@ venv.bak/
 *.out
 *.sh
 *.m~
+nonunitaryOMM/__init__.py
+nonunitaryOMM/inner_prod_qc.py
+nonunitaryOMM/nuOMM.py
+nonunitaryOMM/test_script.ipynb
